--- a/Projeto/css/estilo.css
+++ b/Projeto/css/estilo.css
@@ -28,4 +28,14 @@ main{
     padding: 15px;
     margin-top: 15px;
 }
-
+.rodape{
+    background-color: rgb(80, 76, 76);
+    padding: 15px;
+    margin-top: 15px;
+    text-align: center;
+}
+.content-section h2{
+    background-color: rgb(105, 100, 100);
+    border-bottom: solid rgb(55, 70, 68) 5px;
+    padding: 12px;
+}
