--- a/Projeto/css/estilo.css
+++ b/Projeto/css/estilo.css
@@ -4,10 +4,34 @@ body {
   margin: 0;
 }
 .hero {
-  background-image: url(/imagens/tile.png);
+  background-image: url(/imagens/slide2.jpg);
   height: 500px;
   background-position: right center;
   background-size: cover;
+  border-top: 0.1px solid transparent;
+}
+.hero nav ul {
+  margin: 15px 12px;
+  text-align: right;
+}
+.hero nav li {
+  display: inline-block;
+  list-style: none;
+  border: 1px solid rgb(2, 11, 92);
+  margin: 0px 5px 0px 5px;
+}
+.hero nav a {
+  display: block;
+  background: rgba(59, 27, 27, 0.4);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  padding: 15px;
+  color: #ccc;
+}
+.hero nav a:hover {
+  background: rgba(59, 27, 27, 0.6);
 }
 .hero-content {
   text-align: center;
