--- a/MeuProjeto/dos.css
+++ b/MeuProjeto/dos.css
@@ -1,28 +1,23 @@
 body {
-  font-family: tahoma, arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-#principal {
+.principal {
+  margin: 10px auto;
   width: 1024px;
-  margin: 20px auto;
-}
-
-.header-top {
-  height: 50px;
-  background: #162028;
-  position: relative;
 }
 .logotipo {
-  margin: 5px 0 0 135px;
+  margin-left: 134px;
 }
-
+.header-top {
+  background-color: rgb(27, 53, 100);
+  position: relative;
+  padding: 10px;
+}
 .header-nav {
   position: absolute;
   top: 0;
   right: 0;
-  height: 100%;
+  height: 100px;
 }
 .header-nav ul {
   margin: 0;
@@ -31,95 +26,83 @@ body {
 .header-nav li {
   list-style: none;
   display: inline-block;
-  margin: 0 15px 0 0;
-  padding: 13px;
+  margin-left: 0 15px 0 0;
+  padding: 20px;
 }
 .header-nav a {
-  color: #425564;
   text-decoration: none;
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 5px;
-  transition: color 0.3s linear;
+  color: aliceblue;
 }
 .header-nav a:hover {
-  color: white;
+  color: blueviolet;
+  transition: color 0.5s;
 }
-
-.portfolio {
-  padding: 50px 100px;
+.art {
   text-align: center;
+  padding-top: 23px;
 }
-
-.portfolio h1 {
-  font-size: 36px;
-  color: #252525;
+.art h1 {
+  font-size: x-large;
+  color: crimson;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-shadow: 2px 4px rgba(255, 0, 0, 0.486);
 }
-.portfolio p {
-  font-size: 16px;
-  line-height: 2;
-  color: #555;
+.art p {
+  font-weight: 200;
 }
-
 .gallery {
-  color: #555;
-  padding: 0 100px 50px 100px;
+  padding: 100px;
   overflow: auto;
 }
-
-.gallery-card {
-  width: 33%;
+.card {
   float: left;
+  width: 33, 33%;
+  margin-left: 13px;
   text-align: center;
 }
-
 .gallery-title {
   text-transform: uppercase;
-  letter-spacing: 4px;
-  font-size: 16px;
   font-weight: bold;
+  letter-spacing: 2px;
 }
-
+.gallery-text {
+  text-shadow: 2px 2px royalblue;
+}
 .about {
+  clear: both;
   background-color: #003d52;
   padding: 100px;
   color: white;
   background-image: url(../imagens/bg_detalhe.png);
   background-repeat: no-repeat;
   background-position: right bottom;
+  overflow: auto;
 }
 .about h2 {
+  font-size: 43px;
   text-transform: uppercase;
-  font-size: 50px;
-  font-weight: normal;
 }
 .about p {
-  line-height: 1.5;
-  width: 70%;
+  width: 40%;
+  text-shadow: 3px 3px seagreen;
 }
-
-#contact {
-  margin: 50px 0;
-}
-
-#contact address {
-  color: #143f52;
-  text-transform: uppercase;
-  font-size: 26px;
-  font-style: normal;
+.endereço address {
+  padding: 100px;
   text-align: center;
-  font-weight: bold;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 3px;
+  color: rgb(9, 48, 48);
 }
-
 .maps {
   width: 100%;
   height: 450px;
-  margin-top: 15px;
 }
 .maps iframe {
   width: 100%;
 }
-
 .rodape {
   background: #0b171f;
   padding: 25px;
@@ -127,4 +110,5 @@ body {
   color: #6f8597;
   letter-spacing: 5px;
   text-align: center;
+  margin-bottom: 10px;
 }
