--- a/Meus Testes/transition.css
+++ b/Meus Testes/transition.css
@@ -14,9 +14,11 @@ hr {
 .cabe {
   text-align: center;
   background-image: url(Imagens/cropped-1366-768-711435.jpg);
-  background-position: right;
+  background-size: cover;
+  background-position: bottom;
   background-repeat: no-repeat;
-  padding: 100px 0 100px;
+  background-attachment: fixed;
+  padding: 120px 120px;
   position: relative;
   border-bottom: 4px solid black;
   margin-bottom: 12px;
@@ -36,7 +38,7 @@ hr {
 .menu ul {
   position: absolute;
   right: 0;
-  top: 0;
+  top:0;
 }
 .menu li {
   list-style: none;
@@ -56,6 +58,7 @@ hr {
   padding: 10px;
   margin-top: 15px;
   border: rgb(61, 14, 14) 2px solid;
+  border-radius: 5px;
   transition-property: all;
   transition-duration: 0.8s;
   transition-timing-function: ease-in-out;
@@ -71,11 +74,7 @@ hr {
 }
 @keyframes tovers {
   0% {
-    color: aqua;
     border-radius: 10px;
-  }
-  25% {
-    border-radius: 25px;
   }
   100% {
     color: black;
